# ParseTxtForMods

./: Cargo.toml  README.md  test.txt  text.txt
changes/fighter/common/param/: common.txt  fighter_param.txt  fighter_param_motion.txt
changes/ui/param/database/: ui_bgm_db.txt  ui_chara_db.txt
src/: lib.rs  main.rs  parse.rs
