[package]
name = "ParseTxtForMods"
version = "0.1.0"
authors = ["pine"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prc-rs = { git = "https://github.com/ultimate-research/prc-rs", default-features = false}
hash40 = "*"
walkdir = "2"